@@ -1,3 +1,6 @@
+2022-10-07
+- Improve nbar handling. Add private enterprise number decoding
+
 2022-10-03
 - Merge pull request #357
 
